--- a/src/components/organisms/comment/Comment.module.scss
+++ b/src/components/organisms/comment/Comment.module.scss
@@ -5,7 +5,7 @@
   grid-template-columns: max-content 1fr;
   grid-template-rows: 1fr auto;
   row-gap: 1rem;
-  column-gap: 0.5rem;
+  column-gap: 0.75rem;
   padding: 0.25rem;
   place-content: center;
   border-bottom: var(--border-primary);
@@ -14,11 +14,6 @@
     column-gap: 1rem;
     row-gap: 1rem;
     grid-template-columns: max-content 1fr;
-  }
-
-  @include common.mediaquery('desktop') {
-    column-gap: 0.75rem;
-    row-gap: 0.5rem;
     padding-right: 1.5rem;
   }
 
@@ -38,6 +33,7 @@
   align-items: flex-start;
   grid-column: 1 / 1;
   align-self: flex-start;
+  margin-top: 0.25rem;
 
   @include common.mediaquery('desktop') {
     margin-left: 0.1rem;
@@ -55,15 +51,17 @@
 
 .content {
   display: inline;
-  margin-left: 0.5rem;
 }
 
 .commentText {
   white-space: pre-line;
   word-break: break-all;
   display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
   align-items: flex-start;
   width: fit-content;
+  gap: 0.25rem;
   padding-top: 0.3rem;
 }
 
